<resources>
    <string name="app_name">ConstraintLayoutSample</string>
    <string name="tv_title">必要な情報を入力してください</string>
    <string name="tv_name">名前</string>
    <string name="tv_email">メールアドレス</string>
    <string name="tv_comment">質問内容</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear">クリア</string>
    <string name="tv_start_massage">作成者に質問する</string>
    <string name="bt_create">作成</string>
    <string name="dialog_title">送信確認</string>
    <string name="dialog_message">入力された質問内容で間違いないですか。</string>
    <string name="dialog_btn_ok">送信</string>
    <string name="dialog_btn_ng">キャンセル</string>
</resources>